<resources>
    <string name="app_name">ВТБ Авто</string>
    <string name="vtp_auto_caps">ВТБ АВТО</string>
    <string name="car_list">Список авто</string>
    <string name="price">Цена</string>
    <string name="name">Название</string>
    <string name="credits">Кредиты</string>
    <string name="car">Авто</string>
    <string name="calc">Калькулятор</string>
    <string name="carName">%1$s %2$s</string>
    <string name="carPrice">от %1$s ₽</string>
    <string name="brand">%1$s</string>
    <string name="profile">Профиль</string>
    <string name="countryLabel">Страна</string>
    <string name="countryValue">%1$s</string>
    <string name="bodyTypeLabel">Тип кузова</string>
    <string name="bodyTypeValue">%1$s</string>
    <string name="countDoorsLabel">Количество дверей</string>
    <string name="countDoorsValue">%1$d</string>
    <string name="countColorsLabel">Размер цветовой палитры</string>
    <string name="countColorsValue">%1$d</string>
    <string name="buy_in_credit">Покупка в кредит</string>
    <string name="calculate">Рассчитать</string>
    <string name="choose_photo">Выбрать фото из галереи</string>
    <string name="some_text">Система распознает автомобиль и покажет подходящие предложения</string>
    <string name="open_camera">Открыть камеру</string>
    <string name="contact_data">Контактные данные</string>
    <string name="hint">На эти адреса и номер телефона приходят уведомления и письма.</string>
    <string name="labelName">Имя</string>
    <string name="narek">Нарек</string>
    <string name="second_name">Фамилия</string>
    <string name="gevorkyan">Геворкян</string>
    <string name="birthday">Дата рождения</string>
    <string name="_dd_mm_yyyy">гггг-мм-дд</string>
    <string name="phone">Телефон</string>
    <string name="email_email_example_com">mrnarek149@gmail.com</string>
    <string name="email">Email</string>
    <string name="request_credit">Заявка на кредит</string>
    <string name="labelCountCASCO">Стоимость КАСКО</string>
    <string name="countCASCO">%1$s ₽</string>
    <string name="labelTotal">ИТОГО</string>
    <string name="total">%1$s ₽</string>
    <string name="first_fee">Первоначальный взнос</string>
    <string name="choose_first_fee">Укажите размер первоначального взноса</string>
    <string name="_50_000_610_000">от 50 000 ₽ до 610 000 ₽</string>
    <string name="maxPriceFee">от 50 000 ₽ до %1$s ₽</string>
    <string name="for_a_period">На срок</string>
    <string name="hint_credit">Чем больше срок кредита, тем меньше ежемесячный платёж</string>
    <string name="periodCredit">%1$d лет</string>
    <string name="_1">1 год</string>
    <string name="_7">7 лет</string>
    <string name="labelEveryMonthPay">Ежемесячный платеж от</string>
    <string name="everyMonthPrice">%1$s ₽</string>
    <string name="get_request">Оформить заявку</string>
    <string name="_100_000">100000</string>
    <string name="labelSendRequest">Оформление заявки</string>
    <string name="labelSumCredit">Сумма кредита</string>
    <string name="labelInterestRate">Процентная ставка</string>
    <string name="interestRate">%1$s%%</string>
    <string name="fillContactInfo">Заполните контактные данные</string>
    <string name="labelFillInfoHint">На эти адреса и номер телефона будут приходить уведомления и письма от банка.</string>
    <string name="sendRequest">Отправить заявку</string>
    <string name="sending_request">Отправка заявки</string>
    <string name="requestSended">Заявка отправлена</string>
    <string name="done_hint">Вы можете узнать статус заявки в разделе “Кредиты”</string>
    <string name="wait">В обработке</string>
    <string name="myCredits">Мои кредиты</string>
    <string name="state">%1$s</string>
    <string name="number">+79270139784</string>
    <string name="year_example">1999-11-04</string>
    <string name="gevorkyan_narek">Геворкян Нарек</string>
</resources>